# ChessboardDetection_cpp

./: .gitignore  CMakeLists.txt  README.md
src/config/: parameters.yaml
src/include/: Chessboard.hpp  Disparity.hpp  Image.hpp
src/src/: Chessboard.cpp  Disparity.cpp  Distance.cpp  Image.cpp  main copy.cpp  main.cpp
